Ajuestes no Fluxo e responsabilidades, JUnit Controller
